--- a/app/src/main/res/layout/activity_trapecio.xml
+++ b/app/src/main/res/layout/activity_trapecio.xml
@@ -4,17 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#93C4DA"
     tools:context=".TrapecioActivity"
     tools:layout_editor_absoluteX="0dp"
     tools:layout_editor_absoluteY="16dp">
 
     <TextView
         android:id="@+id/lblTituloTrapecio"
-        android:layout_width="259dp"
-        android:layout_height="58dp"
+        android:layout_width="264dp"
+        android:layout_height="69dp"
+        android:fontFamily="serif"
         android:text="Area y perímetro de un trapecio "
         android:textAlignment="center"
+        android:textColor="#FAF7F7"
         android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -26,8 +30,12 @@
         android:id="@+id/btnAreaTrapecio"
         android:layout_width="135dp"
         android:layout_height="48dp"
+        android:fontFamily="serif"
         android:onClick="calcularArea"
         android:text="AREA"
+        android:textColor="#03A9F4"
+        android:textStyle="bold"
+        app:backgroundTint="#FAF6F6"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.224"
@@ -39,8 +47,11 @@
         android:id="@+id/btnPerimetroTrapecio"
         android:layout_width="137dp"
         android:layout_height="52dp"
+        android:fontFamily="serif"
         android:onClick="calcularPerimetro"
         android:text="PERÍMETRO"
+        android:textColor="#03A9F4"
+        app:backgroundTint="#FAF6F6"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.222"
@@ -52,22 +63,28 @@
         android:id="@+id/txtBaseMayorTrap"
         android:layout_width="100dp"
         android:layout_height="53dp"
-        android:layout_marginEnd="84dp"
-        android:layout_marginBottom="256dp"
+        android:layout_marginBottom="316dp"
         android:ems="10"
         android:inputType="text"
+        android:textColor="#FAF7F7"
         android:textSize="15sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.717"
+        app:layout_constraintStart_toStartOf="parent"
         tools:text="@string/txtBaseMayorTrap" />
 
     <TextView
         android:id="@+id/lblAlturaTrap"
         android:layout_width="62dp"
         android:layout_height="23dp"
+        android:fontFamily="serif"
         android:text="Altura:"
         android:textAlignment="center"
+        android:textColor="#FAF7F7"
         android:textSize="15sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.297"
@@ -79,11 +96,13 @@
         android:id="@+id/txtBaseMenorTrap"
         android:layout_width="100dp"
         android:layout_height="53dp"
-        android:layout_marginEnd="84dp"
-        android:layout_marginBottom="188dp"
+        android:layout_marginEnd="88dp"
+        android:layout_marginBottom="244dp"
         android:ems="10"
         android:inputType="text"
+        android:textColor="#FAF7F7"
         android:textSize="15sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:text="@string/txtBaseMenorTrap" />
@@ -93,10 +112,12 @@
         android:layout_width="100dp"
         android:layout_height="53dp"
         android:layout_marginEnd="84dp"
-        android:layout_marginBottom="124dp"
+        android:layout_marginBottom="172dp"
         android:ems="10"
         android:inputType="text"
+        android:textColor="#FAF7F7"
         android:textSize="15sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:text="@string/txtBaseAlturaTrap" />
@@ -105,7 +126,10 @@
         android:id="@+id/lblArea"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="serif"
         android:text="Area ="
+        android:textColor="#FAF7F7"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.687"
@@ -117,7 +141,10 @@
         android:id="@+id/lblResultPerim"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="serif"
         android:text="Resultado"
+        android:textColor="#FAF7F7"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.341"
@@ -129,7 +156,10 @@
         android:id="@+id/lblResultArea"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="serif"
         android:text="Resultado"
+        android:textColor="#FAF7F7"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.887"
@@ -141,7 +171,10 @@
         android:id="@+id/lblPerimetro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="serif"
         android:text="Perimetro ="
+        android:textColor="#FAF7F7"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.097"
@@ -153,9 +186,12 @@
         android:id="@+id/lblBaseMenorTrap"
         android:layout_width="101dp"
         android:layout_height="24dp"
+        android:fontFamily="serif"
         android:text="Base Menor:"
         android:textAlignment="center"
+        android:textColor="#FAF7F7"
         android:textSize="15sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.261"
@@ -167,9 +203,12 @@
         android:id="@+id/lblBaseMayorTrap"
         android:layout_width="106dp"
         android:layout_height="19dp"
+        android:fontFamily="serif"
         android:text="Base Mayor:"
         android:textAlignment="center"
+        android:textColor="#FAF7F7"
         android:textSize="15sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.249"
@@ -195,7 +234,9 @@
         android:layout_height="50dp"
         android:ems="10"
         android:inputType="text"
+        android:textColor="#FAF7F7"
         android:textSize="10sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
@@ -210,7 +251,9 @@
         android:layout_height="50dp"
         android:ems="10"
         android:inputType="text"
+        android:textColor="#FAF7F7"
         android:textSize="10sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
@@ -225,7 +268,9 @@
         android:layout_height="50dp"
         android:ems="10"
         android:inputType="text"
+        android:textColor="#FAF7F7"
         android:textSize="10sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.091"
@@ -240,22 +285,27 @@
         android:layout_height="50dp"
         android:ems="10"
         android:inputType="text"
+        android:textColor="#FAF7F7"
         android:textSize="10sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.891"
+        app:layout_constraintHorizontal_bias="0.955"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.289"
+        app:layout_constraintVertical_bias="0.288"
         tools:text="@string/txtB" />
 
     <Button
         android:id="@+id/btnVolver"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="113dp"
+        android:layout_height="54dp"
+        android:fontFamily="serif"
         android:onClick="volver"
         android:text="Volver"
-        app:backgroundTint="#3DDB83"
+        android:textColor="#03A9F4"
+        android:textStyle="bold"
+        app:backgroundTint="#FBFBFB"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.93"
