--- a/app/src/main/res/layout/activity_area_perimetro_pentagono.xml
+++ b/app/src/main/res/layout/activity_area_perimetro_pentagono.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0B0A0A"
+    android:background="#93C4DA"
     tools:context=".Area_Perimetro_Pentagono">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="serif"
         android:text="Ingrese el apotema"
         android:textColor="#FBF9F9"
         android:textSize="16sp"
@@ -39,8 +40,8 @@
 
     <EditText
         android:id="@+id/idResMulti"
-        android:layout_width="74dp"
-        android:layout_height="46dp"
+        android:layout_width="104dp"
+        android:layout_height="54dp"
         android:ems="10"
         android:inputType="text"
         android:textColor="#FAF7F7"
@@ -49,12 +50,13 @@
         app:layout_constraintHorizontal_bias="0.264"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.844" />
+        app:layout_constraintVertical_bias="0.844"
+        tools:text="......" />
 
     <EditText
         android:id="@+id/idArespuesta"
-        android:layout_width="78dp"
-        android:layout_height="45dp"
+        android:layout_width="111dp"
+        android:layout_height="60dp"
         android:ems="10"
         android:inputType="text"
         android:textColor="#F3ECEC"
@@ -63,7 +65,8 @@
         app:layout_constraintHorizontal_bias="0.381"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.934" />
+        app:layout_constraintVertical_bias="0.934"
+        tools:text="...." />
 
     <TextView
         android:id="@+id/txtMULTIPLICACION"
@@ -101,6 +104,7 @@
         android:id="@+id/txtAr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="serif"
         android:text="A="
         android:textColor="#FFFEFE"
         android:textSize="24sp"
@@ -115,6 +119,7 @@
         android:id="@+id/txtArespuesta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="serif"
         android:text="A="
         android:textColor="#FFFEFE"
         android:textSize="24sp"
@@ -129,9 +134,10 @@
         android:id="@+id/txtPentagono"
         android:layout_width="138dp"
         android:layout_height="29dp"
+        android:fontFamily="serif"
         android:text="PENTAGONO"
         android:textAlignment="center"
-        android:textColor="#00BCD4"
+        android:textColor="#F9F9FA"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -156,9 +162,10 @@
         android:id="@+id/id_perimetro"
         android:layout_width="134dp"
         android:layout_height="31dp"
+        android:fontFamily="serif"
         android:text="PERIMETRO"
         android:textAlignment="center"
-        android:textColor="#00BCD4"
+        android:textColor="#F5F6F6"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -172,6 +179,7 @@
         android:id="@+id/txtperimetro"
         android:layout_width="30dp"
         android:layout_height="33dp"
+        android:fontFamily="serif"
         android:text="P="
         android:textColor="#FFFDFD"
         android:textSize="24sp"
@@ -186,6 +194,7 @@
         android:id="@+id/textPtotal"
         android:layout_width="30dp"
         android:layout_height="33dp"
+        android:fontFamily="serif"
         android:text="P="
         android:textColor="#FFFDFD"
         android:textSize="24sp"
@@ -199,8 +208,8 @@
 
     <EditText
         android:id="@+id/id_lado"
-        android:layout_width="66dp"
-        android:layout_height="46dp"
+        android:layout_width="84dp"
+        android:layout_height="56dp"
         android:ems="10"
         android:inputType="text"
         android:textColor="#F8F5F5"
@@ -209,12 +218,13 @@
         app:layout_constraintHorizontal_bias="0.257"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.499" />
+        app:layout_constraintVertical_bias="0.499"
+        tools:text="..." />
 
     <EditText
         android:id="@+id/id_Ptotal"
-        android:layout_width="66dp"
-        android:layout_height="46dp"
+        android:layout_width="103dp"
+        android:layout_height="52dp"
         android:ems="10"
         android:inputType="text"
         android:textColor="#F8F5F5"
@@ -223,12 +233,14 @@
         app:layout_constraintHorizontal_bias="0.257"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.573" />
+        app:layout_constraintVertical_bias="0.573"
+        tools:text="..." />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="serif"
         android:text="Ingrese el perimetro"
         android:textColor="#FBF9F9"
         android:textSize="16sp"
@@ -243,9 +255,10 @@
         android:id="@+id/txtArea2"
         android:layout_width="70dp"
         android:layout_height="32dp"
+        android:fontFamily="serif"
         android:text="ÁREA"
         android:textAlignment="center"
-        android:textColor="#00BCD4"
+        android:textColor="#FEFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -259,6 +272,7 @@
         android:id="@+id/txtA"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="serif"
         android:text="A="
         android:textColor="#FFFEFE"
         android:textSize="24sp"
@@ -271,22 +285,23 @@
 
     <EditText
         android:id="@+id/idPArea"
-        android:layout_width="70dp"
-        android:layout_height="46dp"
+        android:layout_width="112dp"
+        android:layout_height="52dp"
         android:ems="10"
         android:inputType="text"
         android:textColor="#F6F1F1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.703"
+        app:layout_constraintHorizontal_bias="0.814"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.752" />
+        app:layout_constraintVertical_bias="0.744"
+        tools:text=".." />
 
     <EditText
         android:id="@+id/idArea"
-        android:layout_width="74dp"
-        android:layout_height="43dp"
+        android:layout_width="93dp"
+        android:layout_height="48dp"
         android:ems="10"
         android:inputType="text"
         android:textColor="#F6F4F4"
@@ -295,7 +310,8 @@
         app:layout_constraintHorizontal_bias="0.24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.752" />
+        app:layout_constraintVertical_bias="0.752"
+        tools:text=".." />
 
     <TextView
         android:id="@+id/txtSignoPor"
@@ -317,11 +333,12 @@
         android:id="@+id/btnArea"
         android:layout_width="81dp"
         android:layout_height="56dp"
+        android:fontFamily="serif"
         android:onClick="calculararea"
         android:text="AREA"
-        android:textColor="#F80303"
+        android:textColor="#03A9F4"
         android:textStyle="bold"
-        app:backgroundTint="#E9DFDF"
+        app:backgroundTint="#FDFDFD"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.86"
@@ -333,11 +350,12 @@
         android:id="@+id/btnPerimetro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="serif"
         android:onClick="calcularperimetro"
         android:text="PERIMETRO"
-        android:textColor="#F80303"
+        android:textColor="#03A9F4"
         android:textStyle="bold"
-        app:backgroundTint="#E9DFDF"
+        app:backgroundTint="#F8F6F6"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.906"
@@ -347,10 +365,14 @@
 
     <Button
         android:id="@+id/btnAtras"
-        android:layout_width="87dp"
-        android:layout_height="39dp"
+        android:layout_width="103dp"
+        android:layout_height="42dp"
+        android:fontFamily="serif"
         android:text="ATRAS"
+        android:textColor="#03A9F4"
         android:textSize="16sp"
+        android:textStyle="bold"
+        app:backgroundTint="#FBF8F8"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.006"
