--- a/app/src/main/res/layout/activity_factorial.xml
+++ b/app/src/main/res/layout/activity_factorial.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/perro_jake"
+    android:background="#93C4DA"
     tools:context=".Factorial">
 
     <TextView
@@ -13,8 +13,10 @@
         android:layout_height="141dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="120dp"
+        android:fontFamily="serif"
         android:text="OPERACION FACTORIAL"
         android:textAppearance="@style/TextAppearance.AppCompat.Display3"
+        android:textColor="#F8F5F5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -22,22 +24,26 @@
         android:id="@+id/lblTituloNumero"
         android:layout_width="173dp"
         android:layout_height="67dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="24dp"
+        android:fontFamily="serif"
         android:text="INGRESA UN NUMERO:"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="#F4F1F1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.733" />
+        app:layout_constraintVertical_bias="0.449" />
 
     <TextView
         android:id="@+id/lblTituloResultado"
         android:layout_width="146dp"
         android:layout_height="39dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="104dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginBottom="332dp"
+        android:fontFamily="serif"
         android:text="RESULTADO:"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="#F6F5F5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -45,21 +51,28 @@
         android:id="@+id/txtNumero"
         android:layout_width="131dp"
         android:layout_height="70dp"
-        android:layout_marginTop="484dp"
-        android:layout_marginEnd="64dp"
         android:ems="10"
         android:inputType="text"
-        android:text="Numero"
+        android:textColor="#F8F7F7"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.842"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.447"
+        tools:text="Numero" />
 
     <TextView
         android:id="@+id/lblResultado"
         android:layout_width="351dp"
         android:layout_height="61dp"
-        android:layout_marginEnd="36dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginBottom="208dp"
+        android:fontFamily="serif"
         android:text="Text"
+        android:textAlignment="center"
+        android:textColor="#F4F1F1"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -67,12 +80,17 @@
         android:id="@+id/btnCalcular"
         android:layout_width="160dp"
         android:layout_height="62dp"
-        android:layout_marginEnd="36dp"
-        android:layout_marginBottom="112dp"
+        android:layout_marginBottom="324dp"
+        android:fontFamily="serif"
         android:text="Calcular"
+        android:textAlignment="center"
+        android:textColor="#03A9F4"
+        android:textStyle="bold"
         app:backgroundTint="#FAF4F4"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.888"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnRegresar"
@@ -80,7 +98,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
         android:layout_marginTop="36dp"
+        android:fontFamily="serif"
         android:text="REGRESAR"
+        android:textAlignment="center"
+        android:textColor="#03A9F4"
+        android:textStyle="bold"
+        app:backgroundTint="#F7F9FA"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
