--- a/app/src/main/res/layout/activity_fibonacci.xml
+++ b/app/src/main/res/layout/activity_fibonacci.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/spiderman"
+    android:background="#93C4DA"
     tools:context=".FibonacciActivity">
 
     <EditText
@@ -15,17 +15,23 @@
         android:layout_marginBottom="524dp"
         android:ems="10"
         android:inputType="numberSigned"
-        android:text="..."
+        android:textColor="#FAF4F4"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="..." />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="404dp"
-        android:layout_height="63dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="456dp"
+        android:layout_width="283dp"
+        android:layout_height="72dp"
+        android:layout_marginEnd="52dp"
+        android:layout_marginBottom="444dp"
+        android:fontFamily="serif"
         android:text="CALCULAR"
+        android:textColor="#03A9F4"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:backgroundTint="#FBF7F7"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -45,33 +51,47 @@
             <TextView
                 android:id="@+id/TexView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textColor="#F6F4F4"
+                android:textStyle="bold" />
 
         </LinearLayout>
     </ScrollView>
 
     <TextView
         android:id="@+id/textTit"
-        android:layout_width="254dp"
-        android:layout_height="66dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="636dp"
+        android:layout_width="214dp"
+        android:layout_height="65dp"
+        android:fontFamily="serif"
         android:text="FIBONACCI"
-        android:textColor="@color/design_default_color_error"
+        android:textAlignment="center"
+        android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.198" />
 
     <Button
         android:id="@+id/btbFibo"
-        android:layout_width="120dp"
-        android:layout_height="59dp"
-        android:layout_marginEnd="280dp"
-        android:layout_marginBottom="640dp"
-        android:onClick="regresarfib"
+        android:layout_width="131dp"
+        android:layout_height="75dp"
+        android:fontFamily="serif"
+        android:onClick="regresarFib"
         android:text="REGRESAR"
+        android:textAlignment="center"
+        android:textColor="#03A9F4"
+        android:textStyle="bold"
+        app:backgroundTint="#FBF8F8"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.072"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.048" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
