--- a/app/src/main/res/layout/activity_formula_general.xml
+++ b/app/src/main/res/layout/activity_formula_general.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/btnregresar"
+    android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/implementos_escritura_naranja_pizarra"
+    android:background="#93C4DA"
     tools:context=".FormulaGeneral"
     tools:layout_editor_absoluteX="2dp"
     tools:layout_editor_absoluteY="57dp">
@@ -14,188 +15,208 @@
         android:id="@+id/txtnega"
         android:layout_width="180dp"
         android:layout_height="35dp"
-        android:layout_marginStart="216dp"
-        android:layout_marginTop="660dp"
         android:background="#F3F2F4"
         android:textColor="@color/black"
         android:textSize="16sp"
-        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.93"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.806"
         tools:text="NEGATIVO" />
 
     <TextView
         android:id="@+id/txtposi"
         android:layout_width="180dp"
         android:layout_height="33dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="660dp"
+        android:layout_marginStart="12dp"
         android:background="#FFFFFF"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.807"
         tools:text="POSITIVO" />
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="178dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="616dp"
-        android:background="#673AB7"
+        android:layout_width="187dp"
+        android:layout_height="57dp"
+        android:background="#FDFCFD"
+        android:fontFamily="serif"
         android:text="RESULTADO POSITIVO :"
-        android:textColor="#FFFFFF"
+        android:textAlignment="center"
+        android:textColor="#101010"
         android:textSize="16sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.071"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.733" />
 
     <TextView
         android:id="@+id/textView11"
-        android:layout_width="178dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="216dp"
-        android:layout_marginTop="616dp"
-        android:background="#673AB7"
+        android:layout_width="180dp"
+        android:layout_height="54dp"
+        android:background="#FBFBFB"
+        android:fontFamily="serif"
         android:text="RESULTADO NEGATIVO :"
-        android:textColor="#FFFFFF"
+        android:textAlignment="center"
+        android:textColor="#333333"
         android:textSize="16sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.93"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.735" />
 
     <EditText
         android:id="@+id/ednumeroc"
         android:layout_width="107dp"
         android:layout_height="48dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="368dp"
         android:background="@color/white"
         android:ems="10"
         android:inputType="text"
+        android:textColor="#0C0C0C"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.092"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.447"
         tools:text="numero c" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="252dp"
         android:layout_height="38dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="332dp"
+        android:fontFamily="serif"
         android:text="INGRESE EL TERCER NUMERO:"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.176"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.384" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="252dp"
         android:layout_height="38dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="228dp"
+        android:fontFamily="serif"
         android:text="INGRESE EL SEGUNDO NUMERO:"
         android:textColor="#F4F4F4"
         android:textSize="16sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.176"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.253" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="251dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="52dp"
-        android:layout_marginEnd="100dp"
+        android:layout_width="267dp"
+        android:layout_height="76dp"
+        android:fontFamily="serif"
         android:text="FRORMULA GENERAL"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.018" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="252dp"
         android:layout_height="38dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="120dp"
+        android:fontFamily="serif"
         android:text="INGRESE EL PRIMER NUMERO:"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.176"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.125" />
 
     <EditText
         android:id="@+id/ednumeroa"
         android:layout_width="107dp"
         android:layout_height="48dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="164dp"
         android:background="@color/white"
         android:ems="10"
         android:inputType="text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.092"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.172"
         tools:text="numero a" />
 
     <EditText
         android:id="@+id/ednumerob"
         android:layout_width="107dp"
         android:layout_height="48dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="264dp"
         android:background="@color/white"
         android:ems="10"
         android:inputType="text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.092"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.311"
         tools:text="numero b" />
 
     <Button
-        android:id="@+id/button2"
-        android:layout_width="215dp"
-        android:layout_height="116dp"
-        android:layout_marginStart="112dp"
-        android:layout_marginBottom="204dp"
-        android:background="@android:drawable/ic_menu_send"
-        android:onClick="calculaFormula"
-        android:text="CALCULAR"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:backgroundTint="#722EEC"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
         android:id="@+id/button"
-        android:layout_width="215dp"
-        android:layout_height="116dp"
-        android:layout_marginStart="112dp"
-        android:layout_marginBottom="204dp"
-        android:background="@android:drawable/ic_menu_send"
+        android:layout_width="219dp"
+        android:layout_height="74dp"
+        android:fontFamily="serif"
         android:onClick="calculaFormula"
         android:text="CALCULAR"
+        android:textColor="#03A9F4"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:backgroundTint="#722EEC"
+        app:backgroundTint="#EFF3F4"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.585" />
 
     <Button
         android:id="@+id/btnregresa"
         android:layout_width="127dp"
         android:layout_height="53dp"
-        android:layout_marginStart="152dp"
-        android:layout_marginBottom="160dp"
+        android:layout_marginBottom="60dp"
+        android:fontFamily="serif"
         android:text="REGRESAR"
+        android:textColor="#03A9F4"
+        android:textStyle="bold"
+        app:backgroundTint="#FFFDFD"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.475"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
