--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#93C4DA"
     tools:context=".MainActivity">
 
     <TextView
@@ -21,7 +22,7 @@
         android:layout_height="56dp"
         android:layout_marginTop="336dp"
         android:layout_marginEnd="16dp"
-        android:background="#D6C0FD"
+        android:background="#F5F4F8"
         android:ems="10"
         android:inputType="text"
         android:textColor="#100F0F"
@@ -35,9 +36,10 @@
         android:layout_height="69dp"
         android:layout_marginTop="84dp"
         android:layout_marginEnd="72dp"
+        android:fontFamily="serif"
         android:text="TEOREMA DE PITAGORAS"
         android:textAlignment="center"
-        android:textColor="#121212"
+        android:textColor="#FDFCFC"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,9 +52,11 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="188dp"
         android:layout_marginEnd="28dp"
+        android:fontFamily="serif"
         android:text="Ingrese  Lado A"
         android:textAlignment="center"
-        android:textColor="#171616"
+        android:textColor="#FBFAFA"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/txtladoA"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -64,9 +68,11 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="272dp"
         android:layout_marginEnd="28dp"
+        android:fontFamily="serif"
         android:text="Ingrese  Lado B"
         android:textAlignment="center"
-        android:textColor="#121111"
+        android:textColor="#FAF8F8"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/txtladoB"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -78,9 +84,11 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="348dp"
         android:layout_marginEnd="24dp"
+        android:fontFamily="serif"
         android:text="Ingrese  Lado C"
         android:textAlignment="center"
-        android:textColor="#131313"
+        android:textColor="#FFFCFC"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/txtladoC"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -91,7 +99,7 @@
         android:layout_height="59dp"
         android:layout_marginTop="176dp"
         android:layout_marginEnd="16dp"
-        android:background="#D6C0FD"
+        android:background="#F9F8FB"
         android:ems="10"
         android:inputType="text"
         android:shadowColor="#F1EBEB"
@@ -106,7 +114,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="256dp"
         android:layout_marginEnd="16dp"
-        android:background="#D6C0FD"
+        android:background="#FBFBFB"
         android:ems="10"
         android:inputType="text"
         android:textColor="#171616"
@@ -118,21 +126,27 @@
         android:id="@+id/btnCalcula"
         android:layout_width="135dp"
         android:layout_height="70dp"
-        android:layout_marginEnd="128dp"
         android:layout_marginBottom="108dp"
+        android:fontFamily="serif"
         android:onClick="calcula"
         android:text="CALCULAR"
-        app:backgroundTint="#571818"
+        android:textColor="#03A9F4"
+        android:textStyle="bold"
+        app:backgroundTint="#FBFAFA"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnRegresar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="serif"
         android:onClick="regresar"
         android:text="REGRESAR"
-        app:backgroundTint="#972828"
+        android:textColor="#03A9F4"
+        android:textStyle="bold"
+        app:backgroundTint="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
